--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -3,17 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Poetic Atma</title>
   </head>
   <body>
-    <form action="/uploadExcelFile" enctype="multipart/form-data" method="post">
-      <input
-        type="file"
-        name="uploadfile"
-        accept="application/vnd.openxmlformats- 
-                  officedocument.spreadsheetml.sheet, application/vnd.ms-excel"
-      />
-      <input type="submit" class="p-10 w-100" value="Upload Excel" />
-    </form>
+    <h1>Welcome to poetic atma</h1>
   </body>
 </html>
